--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,14 +2,14 @@
     position: absolute;
     width: 450px;
     height: 300px;
-    right: 950px;
+    right: 50%;
   }
 
 .right {
     position: absolute;
     width: 450px;
     height: 300px;
-    right: 500px;
+    right: 0%;
 }
 
 .body {
